What's new in version 0.50:

  DEFERRED WRITING:  You may now use the ->defer method to request
  that changes to the array *not* be written to the file immediately.
  Changes will be written when the memory limit for deferred writes is
  exceeded, or when you invoke the ->flush method.  You may discard
  pending writes with the ->discard method.  You may set the limit of
  discarded data with the 'dw_size' option.

  The DELETE method now returns the correct values.

What's new in version 0.20:

  MAJOR INCOMPATIBLE CHANGE: Records read from the tied array now have
  the record separator REMOVED by default.  This is to provide
  do-what-I-meant behavior for expressions like

        $tied[3] .= "more text";

  Formerly, this would have appended "more text" *after* the newline character.

  You may obtain the old behavior by supplying the 'autochomp => 0'
  option in the 'tie' call, or by invoking the new 'autochomp'
  accessor method.

  Tests for this new feature.

What's new in version 0.19:

  Fix for severe bug involving a corrupt read cache.

  Improved default record separator semantics on Win32 systems.

  Many new tests, particularly for the read cache.  Improved old
  tests, which may now produce fewer false failures on Win32 systems.

  Increased documentation.

  INCOMPATIBLE CHANGE: The 'cachesize' option has been renamed to 'memory'.

What's new in version 0.18:

  No significant changes.  (Upload to force CPAN module database to update.)

What's new in version 0.17:

  Minor cleanups and test improvements for release with Perl 5.7.3.

What's new in version 0.16:

  You may now tie an array to an already-opened seekable filehandle,
  rather than to a filename.

  More tests.

  Bug fix in STORE: It wasn't tracking the cache size correctly

  Bug fix in DELETE: it wasn't adjusting the offsets, cache, and LRU
  tables correctly when deleting the last record in the file.

What's new in version 0.15:

  Fixed bug in POP of empty file.
