@@ -1,6 +1,10 @@
 
 (Complete documentation follows this change summary.)
 
+What's new in version 0.51:
+
+  Minor fixes in the test suite.
+
 What's new in version 0.50:
 
   DEFERRED WRITING:  You may now use the ->defer method to request
@@ -90,7 +94,7 @@ NAME
     Tie::File - Access the lines of a disk file via a Perl array
 
 SYNOPSIS
-            # This file documents Tie::File version 0.50
+            # This file documents Tie::File version 0.51
 
             tie @array, 'Tie::File', filename or die ...;
 
@@ -619,7 +623,7 @@ AUTHOR
 
 
 LICENSE
-    `Tie::File' version 0.50 is copyright (C) 2002 Mark Jason
+    `Tie::File' version 0.51 is copyright (C) 2002 Mark Jason
     Dominus.
 
     This library is free software; you may redistribute it and/or
@@ -648,7 +652,7 @@ LICENSE
 
 
 WARRANTY
-    `Tie::File' version 0.50 comes with ABSOLUTELY NO WARRANTY. For
+    `Tie::File' version 0.51 comes with ABSOLUTELY NO WARRANTY. For
     details, see the license.
 
 THANKS
