@@ -5,7 +5,7 @@ use POSIX 'SEEK_SET';
 use Fcntl 'O_CREAT', 'O_RDWR', 'LOCK_EX';
 require 5.005;
 
-$VERSION = "0.50";
+$VERSION = "0.51";
 my $DEFAULT_MEMORY_SIZE = 1<<21;    # 2 megabytes
 
 my %good_opt = map {$_ => 1, "-$_" => 1} 
@@ -849,11 +849,12 @@ sub _check_integrity {
     $good = 0;
   }
 
+  local *_;
   local *F = $self->{fh};
   seek F, 0, SEEK_SET;
   local $/ = $self->{recsep};
   my $rsl = $self->{recseplen};
-  $. = 0;
+  local $. = 0;
 
   while (<F>) {
     my $n = $. - 1;
@@ -960,7 +961,7 @@ Tie::File - Access the lines of a disk file via a Perl array
 
 =head1 SYNOPSIS
 
-	# This file documents Tie::File version 0.50
+	# This file documents Tie::File version 0.51
 
 	tie @array, 'Tie::File', filename or die ...;
 
@@ -1486,7 +1487,7 @@ any news of importance, will be available at
 
 =head1 LICENSE
 
-C<Tie::File> version 0.50 is copyright (C) 2002 Mark Jason Dominus.
+C<Tie::File> version 0.51 is copyright (C) 2002 Mark Jason Dominus.
 
 This library is free software; you may redistribute it and/or modify
 it under the same terms as Perl itself.
@@ -1514,7 +1515,7 @@ For licensing inquiries, contact the author at:
 
 =head1 WARRANTY
 
-C<Tie::File> version 0.50 comes with ABSOLUTELY NO WARRANTY.
+C<Tie::File> version 0.51 comes with ABSOLUTELY NO WARRANTY.
 For details, see the license.
 
 =head1 THANKS
